--- a/Notebooks/Day 1 Introduction to Quantum Circuits.ipynb
+++ b/Notebooks/Day 1 Introduction to Quantum Circuits.ipynb
@@ -712,8 +712,8 @@
    ],
    "source": [
     "qc6 = QuantumCircuit(3,3)\n",
-    "r = np.random.random() * 1\n",
-    "beta = np.random.random() * 2*np.pi\n",
+    "# r = np.random.random() * 1\n",
+    "# beta = np.random.random() * 2*np.pi\n",
     "# qc6.initialize([np.sqrt(1-r**2), r*np.exp(1j*beta)], 2) # Set any one qubit of the 2 swapping qubits to '1' to see a noticable difference between input and output.\n",
     "qc6.initialize([1/np.sqrt(2), -(1+1j)/2], 2)\n",
     "qc6.x(1)\n",
